your add  htmlpage  ile222

--- a/wwwroot/htmlpage.html
+++ b/wwwroot/htmlpage.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>SNNSNDN</title>
-     
+    <title></title>
 </head>
 <body>
-    <ht>asdasd</ht>
+    <h1>sss</h1>
 </body>
 </html>
